Development
	Fix for GTK older thant 2.16
	Fix window sizeing issue when we show the playlist
	Version bump to 0.9.9 to start preparing for next release
	Add open folder to main file menu
	Implement setting of mplayer dvd device from mplayer preferences page, list is generated from 
		system pollable device list when gio is enabled. 
	Update tracker control to update position in timer, when media is paused and position is selected
	Make config option under interface to choose between X Screen Saver control vs Gnome Power Manager
	Always try to link with xscreensaver if available (added to .spec file)
	Drop configure option --with-gpm
	Add configure option --with-gpm=no to skip gnome-power-manager and use the XScreenSaver api
	Add %U to the Exec line in the desktop file
	Mark item as playable if a broken header is detected in a quick time file
	Tweak the pane child resize properties at runtime, should work better with remember location
	Remember pane position between audio only files
	Remove Media Change text and replace it with title in notification popup
	Add gnome-mplayer to the list of preferred applications
	Set background of gtk_socket to black, this plus a fix in gtk should fix flickering
		https://bugzilla.gnome.org/show_bug.cgi?id=598050
	Remember and restore panel position when playlist is visible on startup
	Remember softvol option patch by smoohta
	Updated Czech translation
	Fix problem with playlist detection on glib < 2.22
	Add Hungarian translation
	Add Preference in GUI to disable fullscreen control bar animation, looks crappy on intel+gtk 2.18
	Add GTK2.14 compile defs to gtk_widget_get_window
0.9.8
	Make some events from dbus (separate thread) be processed in the idle loop
	Prevent next item play when terminating
	Set tracker default values when playing a new item
	Don't tell firefox to reload plugins when running in plugin mode
	When closing preference dialog, set media start position to 0 when streaming