@@ -689,6 +689,7 @@ int main(int argc, char *argv[])
     softvol = FALSE;
 	remember_softvol = FALSE;
 	volume_softvol = -1;
+	volume_gain = 0;
     subtitlefont = NULL;
     subtitle_codepage = NULL;
     subtitle_color = NULL;
@@ -785,7 +786,8 @@ int main(int argc, char *argv[])
     fullscreen = gm_pref_store_get_boolean(gm_store, FULLSCREEN);
     softvol = gm_pref_store_get_boolean(gm_store, SOFTVOL);
 	remember_softvol = gm_pref_store_get_boolean(gm_store, REMEMBER_SOFTVOL);
-	volume_softvol = gm_pref_store_get_int(gm_store, VOLUME_SOFTVOL);	    
+	volume_softvol = gm_pref_store_get_int(gm_store, VOLUME_SOFTVOL);	
+	volume_gain = gm_pref_store_get_int(gm_store, VOLUME_GAIN);
     forcecache = gm_pref_store_get_boolean(gm_store, FORCECACHE);
     vertical_layout = gm_pref_store_get_boolean(gm_store, VERTICAL);
     playlist_visible = gm_pref_store_get_boolean(gm_store, SHOWPLAYLIST);
